# smart-rgb

./: Cargo.toml  README.md  STORY.md
src/: main.rs  main.rs.bad  main.rs.disabled2
