[package]
name = "smart-rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
log = "0.4.21"
log4rs = "1.3.0"
openrgb = "0.1.2"
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.2.16", features = ["env-filter"]}
windows-service = "0.7.0"

[dependencies.windows]
version = "0.56"
features = [
  "Win32_System_LibraryLoader",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Power",
  "Win32_System_RemoteDesktop",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_System_Com",
  "Win32_Security",
  "Win32_System_TaskScheduler",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_Console",
  "Win32_Security",
  "UI"
]


[dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI",
  "Win32",
  "Win32_Graphics_Gdi",
]
