[package]
name = "smart-rgb"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true

[dependencies]
anyhow = "1.0"
log = "0.4.21"
log4rs = "1.3.0"
openrgb = "0.1.2"
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
windows-service = "0.7.0"